# emoji-chengyu

./: .gitignore  LICENSE  MANIFEST.in  README.md  make-data.py  prepare-data.sh  pyproject.toml  setup.py
.github/workflows/: python-package.yml  python-publish.yml
emoji_chengyu/: __init__.py  chengyu.py  data.py  main.py  puzzle.py
emoji_chengyu/data/: chengyu.count.json  chengyu.json  emoji.cn.json  idiom.json  tone.json
tests/: test_chengyu.py  test_data.py  test_main.py  test_puzzle.py
